<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:padding="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LabelCustomerName"
            />

        <EditText
            android:id="@+id/customer_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/customer_search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hladaj"
            android:onClick="searchForCustomer" />

        <Button
            android:id="@+id/show_all_customers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listOfCustomers"
            android:onClick="showAllCustomers"/>

        <TextView
            tools:visibility="gone"
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LabelProductInput" />

        <EditText
            tools:visibility="gone"
            android:id="@+id/product_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <Button
            tools:visibility="gone"
            android:id="@+id/product_search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hladaj"
            android:onClick="searchForProduct"/>

        <Button
            android:id="@+id/show_all_orders_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showAll"
            android:onClick="showAllOrders"/>

        <Button
            android:id="@+id/load_database_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loadDatabase"
            android:onClick="loadDatabaseFromCSV"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>